--- a/students.html
+++ b/students.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="stylestudents.css">
 </head>
 <body>
-   
-    <div id="searchStudent">Sök på student:</div>
+    <div id="searchBoxStudent">
+        <form id="searchStudent">
+            <input id="students" type="text" placeholder="Sök efter student">
+            <button>SÖK</button>
+        </form>
+    </div>
 
     <div id="searchResult">Sök resultat:</div>
     
