student js klar

--- a/students.html
+++ b/students.html
@@ -8,13 +8,14 @@
 <body>
     <div id="searchBoxStudent">
         <form id="searchStudent">
-            <input id="students" type="text" placeholder="Sök efter student">
+            <input id="search" type="text" placeholder="Sök efter student">
             <button>SÖK</button>
         </form>
     </div>
 
-    <div id="searchResult">Sök resultat:</div>
+    <div id="searchResult"></div>
     
     <script src="database.js"></script>
+    <script src="students.js"></script>
 </body>
 </html>
