fixat bugg i students.js och html

--- a/courses.html
+++ b/courses.html
@@ -6,7 +6,16 @@
     <link rel="stylesheet" href="stylecourses.css">
 </head>
 <body>
+    <div id="searchBoxCourses">
+        <form id="searchCourses">
+            <input id="courses" type="text" placeholder="Sök efter kurser">
+            <botton>SÖK</botton>
+        </form>
+    </div>
     
+    <div id="searchCourseResult">Sök resultat:</div>
+
     <script src="database.js"></script>
+    <script src="courses.js"></script>
 </body>
 </html>
