--- a/students.html
+++ b/students.html
@@ -13,8 +13,9 @@
         </form>
     </div>
 
-    <div id="searchResult">Sök resultat:</div>
+    <div id="searchResult"></div>
     
     <script src="database.js"></script>
+    <script src="students.js"></script>
 </body>
 </html>
