funktioner för att få fram info om lärare, inte helt klart

--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,7 @@
         </form>
     </div>
     
-    <div id="searchCourseResult">Sök resultat:</div>
+    <div id="searchCourseResult"></div>
 
     <script src="database.js"></script>
     <script src="courses.js"></script>
