--- a/courses.html
+++ b/courses.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>Kurser</title>
     <link rel="stylesheet" href="stylecourses.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200&display=swap" rel="stylecourses.css">
 </head>
 <body>
     <div id="searchBoxCourses">
+        <h2>Search courses</h2>
         <form id="searchCourses">
             <input id="courses" type="text" placeholder="Sök efter kurser">
         </form>
