css för students

--- a/students.html
+++ b/students.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Studenter</title>
+    <title>Students</title>
     <link rel="stylesheet" href="stylestudents.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200&display=swap" rel="stylecstudents.css">
 </head>
 <body>
     <div id="searchBoxStudent">
+        <h2>Search students</h2>
         <form id="searchStudent">
             <input id="students" type="text" placeholder="Sök efter student">
         </form>
