--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kurser</title>
+    <title>Courses</title>
     <link rel="stylesheet" href="stylecourses.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200&display=swap" rel="stylecourses.css">
 </head>
